--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 - make squad with subcommands to make it less confuse
 - code refactor
+- swinlane filter to show only select swinlane details using -s 
